@@ -1,3 +1,15 @@
+2008-07-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* src/gnu/ldml/Analyzer.java:
+	(fetchResource(AliasElement)):
+	Add element name to error message.
+	* src/gnu/localegen/PropertiesGenerator.java,
+	(convertToJavaString(String)): Output Unicode characters
+	using \u syntax.
+	(ManualListContent.generateContent(PrintWriter)): Likewise.
+	(OrderedListContent.generateContent(PrintWriter)): Likewise.
+	(TimeZoneContent.generateContent(PrintWriter)): Likewise.
+	
 2008-07-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
